--- a/php-sass-starter/.env.example
+++ b/php-sass-starter/.env.example
@@ -7,6 +7,15 @@ DB_NAME=sass
 DB_USER=root
 DB_PASS=
 DB_CHARSET=utf8mb4
+
+# Mail (optional)
+MAIL_ENABLED=false
+SMTP_HOST=localhost
+SMTP_PORT=25
+SMTP_USER=
+SMTP_PASS=
+SMTP_SECURE=
+SMTP_FROM=no-reply@example.com
+SMTP_FROM_NAME=SASS MVC
 # Optional full DSN (overrides the above if set)
 # DB_DSN=mysql:host=localhost;dbname=sass;charset=utf8mb4
-
