mail kismen calisiyor

--- a/php-sass-starter/.env.example
+++ b/php-sass-starter/.env.example
@@ -17,5 +17,17 @@ SMTP_PASS=
 SMTP_SECURE=
 SMTP_FROM=no-reply@example.com
 SMTP_FROM_NAME=SASS MVC
+# Optional dedicated DB for mail module (to avoid table name conflicts)
+# If not set, falls back to main DB_DSN above
+MAIL_DB_DSN=
+MAIL_DB_USER=
+MAIL_DB_PASS=
+
+# IMAP (optional for incoming mail sync)
+IMAP_HOST=
+IMAP_PORT=993
+IMAP_ENCRYPTION=ssl
+IMAP_USER=
+IMAP_PASS=
 # Optional full DSN (overrides the above if set)
 # DB_DSN=mysql:host=localhost;dbname=sass;charset=utf8mb4
