--- a/php-sass-starter/.env.example
+++ b/php-sass-starter/.env.example
@@ -31,3 +31,10 @@ IMAP_USER=
 IMAP_PASS=
 # Optional full DSN (overrides the above if set)
 # DB_DSN=mysql:host=localhost;dbname=sass;charset=utf8mb4
+# Security headers
+APP_SECURE_HEADERS=false
+
+# reCAPTCHA (optional)
+RECAPTCHA_ENABLED=false
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET=
